# qtproject

./: Actions.qml  CMakeLists.txt  Content.qml  Dialogs.qml  Main.qml  MessageDelegate.qml  Windows.qml  appI  appII  friend.cpp  friend.h  i.js  main.cpp  tcp.cpp  tcp.h  tcpclient.cpp  tcpclient.h  tcpserver.cpp  tcpserver.h  udpClient.cpp  udpClient.h  udpServer.cpp  udpServer.h
